# exchange-rate-predictor-service

./: .dockerignore  .gitignore  .ipynb  Dockerfile  Makefile  download script backup.py  main.py  pyproject.toml
notebooks/: 01_LOAD_RAW_DATA.ipynb
src/: baseline_model.py  config.py  data_extraction.py  feature_engineering.py  hyperparameter_tuning.py  logger.py  miscellaneous.py  model_registry_api.py  model_training.py  paths.py  predict.py  preprocessing.py
src/feature_pipeline/: data_extraction.py  data_transformations.py  feature_engineering.py  preprocessing.py  training_data.py
src/inference_pipeline/: api.py  api_core.py  deploy.py  endpoints.py  frontend.py  model_registry.py  model_registry_api.py  predict.py  requirements.txt  schemas.py
src/inference_pipeline/app/: endpoints.py  main.py
src/inference_pipeline/model_serving/: schemas.py
src/inference_pipeline/model_serving/app/: api.py  frontend.py  validation.py
src/training_pipeline/: baseline_model.py  hyperparameter_tuning.py  model_registry_api.py  model_training.py
