[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <maadabrandon@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pandas = "^2.1.4"
requests = "^2.31.0"
jupyter = "^1.0.0"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"
pandas-ta = "^0.3.14b0"
comet-ml = "^3.36.0"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
optuna = "^3.5.0"
setuptools = "^69.0.3"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.2"
ruff = "^0.2.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
numpy = "1.24.0"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
railway = "^0.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
