[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <kobinabrandon@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
pandas-ta = "^0.3.14b0"
comet-ml = "^3.47.0"
requests = "^2.32.3"
tqdm = "^4.66.5"
loguru = "^0.7.2"
optuna = "^4.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
ruff = "^0.6.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"